fix dropdown showing behind

--- a/app/assets/stylesheets/components/dashboard.scss
+++ b/app/assets/stylesheets/components/dashboard.scss
@@ -120,7 +120,7 @@
     background-color: rgba(0,0,0,0);
     position: relative;
     text-align: center;
-    z-index: 60;
+    z-index: 2;
 
     border: 2px solid rgba(0, 0, 0, 0);
     height: 40px;
